@@ -1,10 +1,18 @@
 package com.example.smartroom.view;
 
 import com.example.smartroom.model.Device;
+import com.example.smartroom.model.DeviceData;
 import com.example.smartroom.model.Role;
 import com.example.smartroom.model.User;
+import com.example.smartroom.service.ApiService;
 import com.example.smartroom.service.DataService;
 import com.example.smartroom.service.UserSession;
+import javafx.animation.Animation;
+import javafx.animation.KeyFrame;
+import javafx.animation.Timeline;
+import javafx.application.Platform;
+import javafx.beans.property.SimpleStringProperty;
+import javafx.beans.property.StringProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ListChangeListener;
 import javafx.collections.ObservableList;
@@ -13,18 +21,21 @@ import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
 import javafx.scene.control.*;
-import javafx.scene.control.cell.PropertyValueFactory;
+        import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
-
-import java.util.Optional;
-import java.util.stream.Collectors;
+import javafx.util.Duration;
 import org.kordamp.ikonli.javafx.FontIcon;
 import org.kordamp.ikonli.fontawesome5.FontAwesomeSolid;
 import javafx.scene.paint.Color;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class DeviceManagementView {
 
@@ -37,28 +48,108 @@ public class DeviceManagementView {
         layout.setPadding(new Insets(10, 0, 0, 0));
 
         User currentUser = UserSession.getInstance().getUser();
-        ObservableList<Device> deviceData = (currentUser.role() == Role.ADMIN)
-                ? DataService.getAllDevices()
-                : DataService.getDevicesForKtv(currentUser.managedRooms());
+        boolean isAdmin = (currentUser.role() == Role.ADMIN);
+        ObservableList<Device> deviceData = DataService.getAllDevices();
 
-        filteredData = new FilteredList<>(deviceData, p -> true);
+        ApiService apiService = new ApiService();
+        apiService.fetchDevices().thenAccept(devices -> {
+            apiService.fetchAllDeviceData().thenAccept(deviceDataList -> {
+                for (Device device : devices) {
+                    DeviceData latestData = null;
 
-        HBox topBox = createTopBox(deviceData, filteredData);
+                    for (DeviceData data : deviceDataList) {
+                        if (data.getDeviceId().equals(device.getDeviceId())) {
+                            if (latestData == null || data.getCreatedAt().compareTo(latestData.getCreatedAt()) > 0) {
+                                latestData = data;
+                            }
+                        }
+                    }
 
-        deviceTable = new TableView<>();
-        VBox.setVgrow(deviceTable, Priority.ALWAYS);
-        createDeviceTableColumns(deviceTable, deviceData);
+                    if (latestData != null) {
+                        String value = switch (device.getType()) {
+                            case "TEMPERATURE" -> latestData.getTemperature() != null ? latestData.getTemperature() + " °C" : "-";
+                            case "HUMIDITY"   -> latestData.getHumidity() != null ? latestData.getHumidity() + " %" : "-";
+                            case "LIGHT"      -> latestData.getLight() != null ? latestData.getLight() + " lux" : "-";
+                            case "CO2"        -> latestData.getCo2() != null ? String.format("%.0f ppm", latestData.getCo2()) : "-";
+                            default -> "-";
+                        };
+                        device.setValue(value);
 
-        Pagination pagination = new Pagination();
+                        try {
+                            LocalDateTime dateTime = LocalDateTime.parse(latestData.getCreatedAt(), DateTimeFormatter.ISO_LOCAL_DATE_TIME);
+                            String formattedTime = dateTime.format(DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm"));
+                            device.setLastActive(formattedTime);
+                        } catch (Exception e) {
+                            device.setLastActive(latestData.getCreatedAt());
+                        }
+                    }
+                }
 
-        filteredData.addListener((ListChangeListener.Change<? extends Device> c) ->
-                updatePaginationCount(pagination, filteredData)
-        );
-        updatePaginationCount(pagination, filteredData);
 
-        pagination.setPageFactory(this::createPage);
+                if (!isAdmin) {
+                    List<String> allowedRooms = currentUser.managedRooms();
+                    System.out.println("🧠 KTV được phép xem các phòng: " + allowedRooms);
+                    devices.removeIf(d -> !allowedRooms.contains(d.getRoom()));
+                }
 
-        layout.getChildren().addAll(topBox, deviceTable, pagination);
+                javafx.application.Platform.runLater(() -> {
+                    deviceData.setAll(devices);
+                    filteredData = new FilteredList<>(deviceData, p -> true);
+
+                    HBox topBox = createTopBox(deviceData, filteredData);
+                    deviceTable = new TableView<>();
+                    VBox.setVgrow(deviceTable, Priority.ALWAYS);
+                    createDeviceTableColumns(deviceTable, deviceData);
+                    deviceTable.setRowFactory(tv -> new TableRow<>() {
+                        @Override
+                        protected void updateItem(Device device, boolean empty) {
+                            super.updateItem(device, empty);
+
+                            if (device == null || empty) {
+                                setStyle("");
+                                return;
+                            }
+
+                            // Check ngưỡng và set màu nếu vượt
+                            String type = device.getType();
+                            String valueStr = device.valueProperty().get(); // ví dụ "28 °C", "70 %", "410 ppm", "300 lux"
+                            try {
+                                double number = Double.parseDouble(valueStr.replaceAll("[^\\d.]", ""));
+
+                                boolean isDanger = switch (type) {
+                                    case "TEMPERATURE" -> number < 18 || number > 30;
+                                    case "HUMIDITY"    -> number < 35 || number > 70;
+                                    case "LIGHT"       -> number < 200 || number > 1500;
+                                    case "CO2"         -> number > 1500;
+                                    default -> false;
+                                };
+
+                                if (isDanger) {
+                                    setStyle("-fx-background-color: #FCA5A5;"); // light red
+                                } else {
+                                    setStyle("");
+                                }
+                            } catch (Exception e) {
+                                setStyle(""); // nếu parse lỗi thì bỏ qua
+                            }
+                        }
+                    });
+
+
+                    Pagination pagination = new Pagination();
+                    filteredData.addListener((ListChangeListener.Change<? extends Device> c) ->
+                            updatePaginationCount(pagination, filteredData));
+                    updatePaginationCount(pagination, filteredData);
+                    pagination.setPageFactory(this::createPage);
+
+                    layout.getChildren().setAll(topBox, deviceTable, pagination);
+
+                    startAutoUpdate(deviceData, isAdmin);
+
+                });
+            });
+        });
+
         return layout;
     }
 
@@ -90,13 +181,13 @@ public class DeviceManagementView {
         ComboBox<String> typeFilter = new ComboBox<>();
         typeFilter.setPromptText("Loại cảm biến");
         typeFilter.getItems().add("Tất cả");
-        typeFilter.getItems().addAll(sourceData.stream().map(Device::getType).distinct().sorted().collect(Collectors.toList()));
+        typeFilter.getItems().addAll(sourceData.stream().map(Device::getType).distinct().sorted().toList());
         typeFilter.setValue("Tất cả");
 
         ComboBox<String> roomFilter = new ComboBox<>();
         roomFilter.setPromptText("Phòng học");
         roomFilter.getItems().add("Tất cả");
-        roomFilter.getItems().addAll(sourceData.stream().map(Device::getRoom).filter(java.util.Objects::nonNull).distinct().sorted().collect(Collectors.toList()));
+        roomFilter.getItems().addAll(sourceData.stream().map(Device::getRoom).filter(java.util.Objects::nonNull).distinct().sorted().toList());
         roomFilter.setValue("Tất cả");
 
         FontIcon searchIcon = new FontIcon(FontAwesomeSolid.SEARCH);
@@ -121,6 +212,7 @@ public class DeviceManagementView {
                 return imeiMatch && typeMatch && roomMatch;
             });
         });
+
         return filterBox;
     }
 
@@ -133,18 +225,22 @@ public class DeviceManagementView {
 
         TableColumn<Device, String> typeCol = new TableColumn<>("Loại cảm biến");
         typeCol.setCellValueFactory(new PropertyValueFactory<>("type"));
+        typeCol.setCellValueFactory(cellData -> new SimpleStringProperty(cellData.getValue().getFormattedType()));
 
         TableColumn<Device, String> roomCol = new TableColumn<>("Phòng học");
         roomCol.setCellValueFactory(new PropertyValueFactory<>("room"));
 
         TableColumn<Device, String> valueCol = new TableColumn<>("Thông số gần nhất");
-        valueCol.setCellValueFactory(new PropertyValueFactory<>("value"));
+        //valueCol.setCellValueFactory(new PropertyValueFactory<>("value"));
+        valueCol.setCellValueFactory(cellData -> cellData.getValue().valueProperty());
+
 
         TableColumn<Device, String> lastActiveCol = new TableColumn<>("Hoạt động cuối");
-        lastActiveCol.setCellValueFactory(new PropertyValueFactory<>("lastActive"));
+        lastActiveCol.setCellValueFactory(cellData -> cellData.getValue().lastActiveProperty());
 
         TableColumn<Device, String> statusCol = new TableColumn<>("Trạng thái");
         statusCol.setCellValueFactory(new PropertyValueFactory<>("status"));
+        statusCol.setCellValueFactory(cellData -> new SimpleStringProperty(cellData.getValue().getFormattedStatus()));
         statusCol.setCellFactory(ViewHelper.createStyledCellFactory("status-"));
 
         TableColumn<Device, Void> actionCol = new TableColumn<>("Thao tác");
@@ -169,7 +265,26 @@ public class DeviceManagementView {
 
                     Optional<ButtonType> result = confirmAlert.showAndWait();
                     if (result.isPresent() && result.get() == ButtonType.OK) {
-                        sourceList.remove(device);
+                        ApiService apiService = new ApiService();
+                        apiService.deleteDevice(device.getId()).thenRun(() -> {
+                            javafx.application.Platform.runLater(() -> {
+                                sourceList.remove(device);
+                                Alert success = new Alert(Alert.AlertType.INFORMATION);
+                                success.setTitle("Xoá thành công");
+                                success.setHeaderText(null);
+                                success.setContentText("Thiết bị đã được xoá.");
+                                success.showAndWait();
+                            });
+                        }).exceptionally(ex -> {
+                            javafx.application.Platform.runLater(() -> {
+                                Alert error = new Alert(Alert.AlertType.ERROR);
+                                error.setTitle("Lỗi khi xoá thiết bị");
+                                error.setHeaderText(null);
+                                error.setContentText("Không thể xoá thiết bị: " + ex.getMessage());
+                                error.showAndWait();
+                            });
+                            return null;
+                        });
                     }
                 });
             }
@@ -190,4 +305,49 @@ public class DeviceManagementView {
         table.getStyleClass().add("table-cell");
     }
 
+    private void startAutoUpdate(ObservableList<Device> deviceData, boolean isAdmin) {
+        Timeline timeline = new Timeline(
+                new KeyFrame(Duration.seconds(10), event -> {
+                    ApiService apiService = new ApiService();
+                    apiService.fetchAllDeviceData().thenAccept(deviceDataList -> {
+                        Platform.runLater(() -> {
+                            for (Device device : deviceData) {
+                                DeviceData latestData = null;
+
+                                for (DeviceData data : deviceDataList) {
+                                    if (data.getDeviceId().equals(device.getDeviceId())) {
+                                        if (latestData == null || data.getCreatedAt().compareTo(latestData.getCreatedAt()) > 0) {
+                                            latestData = data;
+                                        }
+                                    }
+                                }
+
+                                if (latestData != null) {
+                                    String value = switch (device.getType()) {
+                                        case "TEMPERATURE" -> latestData.getTemperature() != null ? latestData.getTemperature() + " °C" : "-";
+                                        case "HUMIDITY"   -> latestData.getHumidity() != null ? latestData.getHumidity() + " %" : "-";
+                                        case "LIGHT"      -> latestData.getLight() != null ? latestData.getLight() + " lux" : "-";
+                                        case "CO2"        -> latestData.getCo2() != null ? String.format("%.0f ppm", latestData.getCo2()) : "-";
+                                        default -> "-";
+                                    };
+
+                                    device.setValue(value);
+
+                                    try {
+                                        LocalDateTime dateTime = LocalDateTime.parse(latestData.getCreatedAt(), DateTimeFormatter.ISO_LOCAL_DATE_TIME);
+                                        String formattedTime = dateTime.format(DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm"));
+                                        device.setLastActive(formattedTime);
+                                    } catch (Exception e) {
+                                        device.setLastActive(latestData.getCreatedAt());
+                                    }
+                                }
+                            }
+                            deviceTable.refresh(); // cập nhật UI
+                        });
+                    });
+                })
+        );
+        timeline.setCycleCount(Animation.INDEFINITE);
+        timeline.play();
+    }
 }
